// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente <GifExpertApp /> Debe de mostrar una lista de categorías. 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Death Note"
      key="Death Note"
    />
    <GifGrid
      category="Naruto Shippuden"
      key="Naruto Shippuden"
    />
    <GifGrid
      category="Excel Saga"
      key="Excel Saga"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en el componente <GifExpertApp /> Debe de renderizarse correctamente. 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
